projectPageStyle.css
/* GLOBAL STYLES */
body {
    margin: 0;
    font-family: Arial, sans-serif;

    background: linear-gradient(
        135deg,
        #7ea0c7 0%,
        #f5f7ff 50%,
        #eef4ff 100%
    );
}
.backBtn {
    position: absolute;
    top: 20px;
    left: 20px;

    padding: 10px 20px;
    background-color: #192aac;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
.backBtn:hover {
    background-color: #413a9e;
}
.projectgrid-container {
    display: grid;
    gap: 20px;
}
.projectvideo {
    width: 100%;
    height: auto;
    border-radius: 30px;
}
.project-item{
    max-width: 600px;
    width: 100%;
    margin: 0 auto;
    background-color: #ffffff;
    padding: 10px;
    border-radius: 30px;
    text-align: center;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}
.project-item:hover {
    transform: translateY(-5px);
    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
}
.project-description{
    text-align: left;
    font-size: 20px;
}
.subtitle{
    color: #192aac;
    font-size: 18px;
}
.urBurntDescription{
    display: flex;
    gap: 10px;
    margin-top: 10px;
    border-radius: 30px;
    padding: 5px 10px;
}
.Figma,
.HTML,
.CSS,
.TailwindCSS,
.JavaScript,
.DigitalMarketing {
    background-color: #e4e4e4;
    border-radius: 5px;
    padding: 4px 8px;
    width:fit-content;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
.Figma:hover,
.HTML:hover,
.CSS:hover,
.TailwindCSS:hover,
.JavaScript:hover,
.DigitalMarketing:hover {
    background-color: #d4d4d4;
}
.visitwebsite{
    margin-left:auto;
    display:flex;
    align-items:center;
}
.visitwebsite img{
    width: 100%;
    height: 35px;

}
.visitwebsite img:hover{
    transform: scale(1.1);
    transition: transform 0.3s ease;
}

.KHPDescription {
    display: flex;
    gap: 10px;
    margin-top: 19px;
    border-radius: 30px;
    padding: 5px 10px;
}
.projectvideoGame{
    height: 57%;
    border-radius: 10px;
}
.Unity,
.CSharp,
.UXUI,
.Procreate,
.Blender,
.GameDesign {
    background-color: #e4e4e4;
    border-radius: 5px;
    padding: 4px 8px;
    width:fit-content;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
.simpleJavaGamepic{
    width: 100%;
    height: 55%;
    border-radius: 30px;
}
.visitwebsite2{
    margin-left:auto;
    display:flex;
    align-items:center;
}
.visitwebsite2 img{
    width: 100%;
    height: 35px;

}
.visitwebsite2 img:hover{
    transform: scale(1.1);
    transition: transform 0.3s ease;
}

h1 {
    font-size: 2.5rem;
    margin-bottom: 20px;
    padding-top: 50px;
    padding-left: 10px;
}

